--- a/app/scripts/wow/wow.html
+++ b/app/scripts/wow/wow.html
@@ -15,7 +15,9 @@
             </script>.
         </div>
         <div class="col-md-6 col-sm-6 col-xs-6">
-            <div style="background-color: rgba(60,60,60,0.5); width: 100%; height:200px; margin: 10px;border:white solid 1px;"></div>
+            <div style="background-color: rgba(60,60,60,0.5); width: 100%; height:200px; margin: 10px;border:white solid 1px;">
+                <img src="././assets/images/dota.jpg" height="100%" width="100%">
+            </div>
         </div>
         <div class="col-md-6 col-sm-6 col-xs-6">
             <div style="background-color: rgba(60,60,60,0.5); width: 100%; height:200px; margin: 10px;border:white solid 1px;"></div>
