--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     <!-- endbuild -->
     <!-- build:app scripts/app.js -->
     <script src="./scripts/app.js"></script>
-    
+    <script src="./scripts/layout/topnav.js"></script>
     <script src="./scripts/wow/wowService.js"></script>
     <script src="./scripts/wow/wowController.js"></script>
     <script src="./scripts/starcraft/starcraftService.js"></script>
