Post Holiday Check In

--- a/app/scripts/wow/wow.html
+++ b/app/scripts/wow/wow.html
@@ -1,6 +1,5 @@
 <div class="col-md-10 col-sm-10 col-xs-10">
-
-    <body class="rain" onload="createRain()">
+    <body>
         <div style="color:white;">
             <h1>World of Warcraft News</h1>
             <p>Articles taken from The Rosh Pit.</p>
@@ -25,53 +24,20 @@
 </div>
 <style type="text/css">
 body {
-    background: url('././assets/images/wow.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+background: url('././assets/images/wow.jpg') no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
 }
-
 a:link {
-    text-decoration: none;
+text-decoration: none;
 }
-
 a:visited {
-    text-decoration: none;
+text-decoration: none;
 }
-
 a:hover {}
-
 a:active {
-    text-decoration: none;
+text-decoration: none;
 }
-
-
-
-
-
-
-/*Rain*/
-
-.drop {
-  background:-webkit-gradient(linear,0% 0%,0% 100%, from(rgba(13,112,58,1) ), to(rgba(255,255,255,0.6))  );
-  background: -moz-linear-gradient(top, rgba(13,250,58,1) 0%, rgba(255,255,255,.6) 100%);
-    width:1px;
-    height:89px;
-    position: absolute;
-    bottom:200px;
-    -webkit-animation: fall 1.23s linear infinite;
-  -moz-animation: fall 1.23s linear infinite;
-  
-}
-
-/* animate the drops*/
-@-webkit-keyframes fall {
-    to {margin-top:900px;}
-}
-@-moz-keyframes fall {
-    to {margin-top:900px;}
-}
-
-
 </style>
