--- a/app/scripts/wow/article.html
+++ b/app/scripts/wow/article.html
@@ -1,9 +1,9 @@
 <body>
     <div class="col-md-6 col-sm-6 col-xs-6">
-        <div style="background-color: rgba(60,60,60,0.5); width: 100%; height:200px; margin: 10px;border:white solid 1px;">
+        <div style="background-color: rgba(60,60,60,0.5); width: 100%; min-height:200px; margin: 10px;border:white solid 1px;">
             <img src="././assets/images/dota.jpg" height="100%" width="100%">
         </div>
-        <div style="background-color: rgba(60,60,60,0.5); width: 100%; height:300px; margin: 10px;overflow-y: scroll;border:white solid 1px;color: white;">
+        <div style="background-color: rgba(60,60,60,0.5); width: 100%; height:260px; margin: 10px;overflow-y: scroll;border:white solid 1px;color: white;">
         <div style="margin: 5px;">
             At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
             <br><br>
