--- a/app/scripts/dota/dota.html
+++ b/app/scripts/dota/dota.html
@@ -1,27 +1,44 @@
 <div class="col-md-10 col-sm-10 col-xs-10" style="margin-top: 20px;">
 
     <body>
-        <div style="color:white;" ng-controller="dotaController">
-            <div ng-repeat="x in dotadata">
+        <div class="hidden-lg" style="color:white;" ng-controller="dotaController">
+            <div ng-repeat="x in dotadata | limitTo:4">
                 <div class="col-lg-3 col-sm-6 col-xs-6">
-                    <div style="margin:2px;background-color:grey; border:white 1px solid;">
-                        <h1>{{ x.title }}</h1>
-                        <p>{{ x.headline }}</p>
-                        <p>{{ x.date }}</p>
-                        <!-- <img ng-src="{{ x.image }}" width="100%" alt="Article Image" style="border:white 1px solid; background-color:black;" /> -->
-                        <div alt="Article Image" style="background-image: url('{{x.image}}');border:white 1px solid; background-color:black;background-size: cover;background-repeat: no-repeat;background-position: center;height:200px;width:100%;"></div>
-                        <p>{{ x.author }}</p>
+                    <div style="margin:4px; border:black 1px solid;">
+                        <div alt="Article Image" style="background-image: url('{{x.image}}'); background-color:black;background-size: cover;background-repeat: no-repeat;background-position: center;height:250px;width:100%;">
+                            <div style="position:absolute;top:5px; background-color: rgba(0,0,0,0.7);margin:5px">
+                                <h1>{{ x.title }}</h1>
+                            </div>
+                            <div style="position:absolute;top:10px;right:25px; width: 50px; height: 50px;">
+                                <img ng-src="{{ x.avatar }}" width="100%" height="100%" style="border-radius:50%;border:black 1px solid;" />
+                            </div>
+                            <div style="position:absolute;bottom:5px; background-color: rgba(0,0,0,0.7);margin:5px">
+                                <p>{{ x.headline }}</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!--             <table>
-                <tr ng-repeat="x in countries | limitTo:10">
-                    <td>{{ x.name }}</td>
-                    <td>{{ x.capital }}</td>
-                    <td>{{ x.region }}</td>
-                    <td>{{ x.population | currency }}</td>
-                </tr>
-            </table> -->
+        </div>
+
+        <div class="visible-lg" style="color:white;" ng-controller="dotaController">
+            <div ng-repeat="x in dotadata | limitTo:8">
+                <div class="col-lg-3 col-sm-6 col-xs-6">
+                    <div style="margin:4px; border:black 1px solid;">
+                        <div alt="Article Image" style="background-image: url('{{x.image}}'); background-color:black;background-size: cover;background-repeat: no-repeat;background-position: center;height:250px;width:100%;">
+                            <div style="position:absolute;top:5px; background-color: rgba(0,0,0,0.7);margin:5px">
+                                <h1>{{ x.title }}</h1>
+                            </div>
+                            <div style="position:absolute;top:10px;right:25px; width: 50px; height: 50px;">
+                                <img ng-src="{{ x.avatar }}" width="100%" height="100%" style="border-radius:50%;border:black 1px solid;" />
+                            </div>
+                            <div style="position:absolute;bottom:5px; background-color: rgba(0,0,0,0.7);margin:5px">
+                                <p>{{ x.headline }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </div>
@@ -32,19 +49,5 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-}
-
-a:link {
-    text-decoration: none;
-}
-
-a:visited {
-    text-decoration: none;
-}
-
-a:hover {}
-
-a:active {
-    text-decoration: none;
 }
 </style>
