--- a/app/scripts/wow/wow.html
+++ b/app/scripts/wow/wow.html
@@ -7,7 +7,7 @@
         <div class="col-lg-3 col-sm-6 col-xs-6">
             <a href="#article">
                 <div style="background-color: rgba(60,60,60,0.5); width: 100%; height:200px; margin: 10px;border:white solid 1px;">
-                    <img src="././assets/images/dota.jpg" height="100%" width="100%">
+                    <img src="././assets/images/lich.jpg" height="100%" width="100%">
                 </div>
             </a>
         </div>
