--- a/app/scripts/wow/article.html
+++ b/app/scripts/wow/article.html
@@ -1,7 +1,7 @@
 <body>
     <div class="col-md-6 col-sm-6 col-xs-6">
         <div style="background-color: rgba(60,60,60,0.5); width: 100%; min-height:200px; margin: 10px;border:white solid 1px;">
-            <img src="././assets/images/dota.jpg" height="100%" width="100%">
+            <img src="././assets/images/lich.jpg" height="100%" width="100%">
         </div>
         <div style="background-color: rgba(60,60,60,0.5); width: 100%; height:260px; margin: 10px;overflow-y: scroll;border:white solid 1px;color: white;">
             <div style="margin: 5px;">
