TopNav tabs are now functional, added images for all games

--- a/app/scripts/dota/news.html
+++ b/app/scripts/dota/news.html
@@ -1,7 +1,7 @@
 <div class="col-md-10 col-sm-10 col-xs-10" style="margin-top: 20px;">
 
     <body>
-        <div class="hidden-lg" style="color:white;" ng-controller="dotaController">
+        <div class="hidden-lg" style="color:white;">
             <div ng-repeat="x in dotadata | limitTo:4">
                 <div class="col-lg-3 col-sm-6 col-xs-6">
                     <div style="margin:4px; border:black 1px solid;">
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <div class="visible-lg" style="color:white;" ng-controller="dotaController">
+        <div class="visible-lg" style="color:white;">
             <div ng-repeat="x in dotadata | limitTo:8">
                 <div class="col-lg-3 col-sm-6 col-xs-6">
                     <div style="margin:4px; border:black 1px solid;">
