--- a/app/scripts/starcraft/news.html
+++ b/app/scripts/starcraft/news.html
@@ -1,11 +1,11 @@
 <body>
     <div class="col-md-10 col-sm-10 col-xs-10">
-        <video width="100%" xmlns="http://www.w3.org/1999/xhtml" class="background-video" autoplay="autoplay" loop="loop" poster="/sc2/static/images/homepage/Abathur_Render.jpg">
+        <video width="100%" xmlns="http://www.w3.org/1999/xhtml" class="background-video" autoplay="autoplay" loop="loop">
             <source src="http://media.blizzard.com/sc2/home/Abathur_Render.webm" type="video/webm" />
             <source src="http://media.blizzard.com/sc2/home/Abathur_Render.mp4" type="video/mp4" />
         </video>
         <div class="vid">
-            <video width="100%" xmlns="http://www.w3.org/1999/xhtml" class="background-video logo-video" autoplay="autoplay" loop="loop" poster="/sc2/static/videos/logo.jpg">
+            <video width="100%" xmlns="http://www.w3.org/1999/xhtml" class="background-video logo-video" autoplay="autoplay" loop="loop">
                 <source src="http://media.blizzard.com/sc2/home/logo.webm" type="video/webm" />
             </video>
         </div>
