Added active style to SideNav links and changed home Icon

--- a/app/scripts/starcraft/news.html
+++ b/app/scripts/starcraft/news.html
@@ -1,6 +1,9 @@
-<body>
-    <div class="col-md-10 col-sm-10 col-xs-10">
-        <video width="100%" xmlns="http://www.w3.org/1999/xhtml" class="background-video" autoplay="autoplay" loop="loop">
+<div class="col-md-10 col-sm-10 col-xs-10">
+    <body>
+        <div style="color:white;">
+            <h1>News!</h1>
+        </div>
+        <!-- <video width="100%" xmlns="http://www.w3.org/1999/xhtml" class="background-video" autoplay="autoplay" loop="loop">
             <source src="http://media.blizzard.com/sc2/home/Abathur_Render.webm" type="video/webm" />
             <source src="http://media.blizzard.com/sc2/home/Abathur_Render.mp4" type="video/mp4" />
         </video>
@@ -8,9 +11,10 @@
             <video width="100%" xmlns="http://www.w3.org/1999/xhtml" class="background-video logo-video" autoplay="autoplay" loop="loop">
                 <source src="http://media.blizzard.com/sc2/home/logo.webm" type="video/webm" />
             </video>
-        </div>
-    </div>
-</body>
+        </div> -->
+    </body>
+</div>
+
 <style type="text/css">
 body {
     background: url('././assets/images/sc.jpg') no-repeat center center fixed;
