--- a/app/scripts/dota/news.html
+++ b/app/scripts/dota/news.html
@@ -4,15 +4,15 @@
         <div class="hidden-lg" style="color:white;">
             <div ng-repeat="x in dotadata | limitTo:4">
                 <div class="col-lg-3 col-sm-6 col-xs-6">
-                    <div style="margin:4px; border:black 1px solid;">
-                        <div alt="Article Image" style="background-image: url('{{x.image}}'); background-color:black;background-size: cover;background-repeat: no-repeat;background-position: center;height:250px;width:100%;">
-                            <div style="position:absolute;top:5px; background-color: rgba(0,0,0,0.7);margin:5px">
+                    <div style="margin:4px; border:white 1px solid;">
+                        <div alt="Article Image" style="background-image: url('{{x.image}}'); background-color:black;background-size: cover;background-repeat: no-repeat;background-position: center;height:200px;width:100%;">
+                            <!-- <div style="position:absolute;top:5px; background-color: rgba(0,0,0,0.7);margin:5px">
                                 <h1>{{ x.title }}</h1>
                             </div>
                             <div style="position:absolute;top:10px;right:25px; width: 50px; height: 50px;">
                                 <img ng-src="{{ x.avatar }}" width="100%" height="100%" style="border-radius:50%;border:black 1px solid;" />
-                            </div>
-                            <div style="position:absolute;bottom:5px; background-color: rgba(0,0,0,0.7);margin:5px">
+                            </div> -->
+                            <div style="position:absolute;bottom:5px; background-color: rgba(0,0,0,0.7);margin-bottom:5px">
                                 <p>{{ x.headline }}</p>
                             </div>
                         </div>
@@ -24,15 +24,15 @@
         <div class="visible-lg" style="color:white;">
             <div ng-repeat="x in dotadata | limitTo:8">
                 <div class="col-lg-3 col-sm-6 col-xs-6">
-                    <div style="margin:4px; border:black 1px solid;">
+                    <div style="margin:4px; border:white 1px solid;">
                         <div alt="Article Image" style="background-image: url('{{x.image}}'); background-color:black;background-size: cover;background-repeat: no-repeat;background-position: center;height:250px;width:100%;">
-                            <div style="position:absolute;top:5px; background-color: rgba(0,0,0,0.7);margin:5px">
+                            <!-- <div style="position:absolute;top:5px; background-color: rgba(0,0,0,0.7);margin:5px">
                                 <h1>{{ x.title }}</h1>
                             </div>
                             <div style="position:absolute;top:10px;right:25px; width: 50px; height: 50px;">
                                 <img ng-src="{{ x.avatar }}" width="100%" height="100%" style="border-radius:50%;border:black 1px solid;" />
-                            </div>
-                            <div style="position:absolute;bottom:5px; background-color: rgba(0,0,0,0.7);margin:5px">
+                            </div> -->
+                            <div style="position:absolute;bottom:5px; background-color: rgba(0,0,0,0.7);margin-bottom:5px">
                                 <p>{{ x.headline }}</p>
                             </div>
                         </div>
