--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@
     <script src="../bower_components/angular-aria/angular-aria.js"></script>
     <script src="../bower_components/angular-material/angular-material.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../bower_components/requirejs/require.js"></script>
+    <script src="../bower_components/remote/remote.js"></script>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="./scripts/app.js"></script>
     <script src="./scripts/layout/topnav.js"></script>
