--- a/app/scripts/dota/competitions.html
+++ b/app/scripts/dota/competitions.html
@@ -1,18 +1,18 @@
 <div class="col-md-10 col-sm-10 col-xs-10" style="margin-top: 20px; height:80vh;">
 
     <body>
-        <div style="height:100%;overflow-y:auto;">
+        <div class="mainContainer">
             <div class="hidden-lg" style="color:white;">
                 <div ng-repeat="x in dotacompetitions | limitTo:8">
                     <a target="_blank" href="{{x.link}}">
-                        <div class="col-lg-3 col-sm-6 col-xs-6">
+                        <div class="col-lg-3 col-sm-6 col-xs-6" style="margin-bottom:20px;">
                             <div class="articleContainer">
                                 <div class="articleImage" alt="Article Image" style="height:200px;background-image: url('{{x.image}}');">
                                     <div class="articleTitle">
-                                        <p style="color:white">{{ x.title }}</p>
+                                        <p class="articleTitleContent">{{ x.title }}</p>
                                     </div>
                                     <div class="articleDate">
-                                        <p style="color:white">{{ x.compdate | date: short }}</p>
+                                        <p class="articleDateContent">{{ x.compdate | date: short }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -23,14 +23,14 @@
             <div class="visible-lg" style="color:white;">
                 <div ng-repeat="x in dotacompetitions | limitTo:16">
                     <a target="_blank" href="{{x.link}}">
-                        <div class="col-lg-3 col-sm-6 col-xs-6">
+                        <div class="col-lg-3 col-sm-6 col-xs-6" style="margin:20px;">
                             <div class="articleContainer">
                                 <div class="articleImage" alt="Article Image" style="height:250px;background-image: url('{{x.image}}');">
                                     <div class="articleTitle">
-                                        <p style="color:white">{{ x.title }}</p>
+                                        <p class="articleTitleContent">{{ x.title }}</p>
                                     </div>
                                     <div class="articleDate">
-                                        <p style="color:white">{{ x.compdate | date: short }}</p>
+                                        <p class="articleDateContent">{{ x.compdate | date: short }}</p>
                                     </div>
                                 </div>
                             </div>
