--- a/app/scripts/wow/article.html
+++ b/app/scripts/wow/article.html
@@ -28,7 +28,7 @@
 </body>
 <style type="text/css">
 body {
-    background: url('././assets/images/wow.jpg') no-repeat center center fixed;
+    background: url('././assets/images/overwatch.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
