--- a/app/scripts/wow/news.html
+++ b/app/scripts/wow/news.html
@@ -24,7 +24,7 @@
 </div>
 <style type="text/css">
 body {
-background: url('././assets/images/wow.jpg') no-repeat center center fixed;
+background: url('././assets/images/overwatch.jpg') no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
